# euroboard

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
bourse/: app.py  etl.py  timescaledb_model.py
