[project]
name = "bourse-dashboard"
version = "0.1"
authors = ["Baptiste Esteban", "Olivier Ricou"]
requires-python = ">=3.14,<3.15"
dependencies = [
    "dash>=4.0.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-extensions>=2.0.5",
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-timescaledb>=0.4.1",
]
